# niuristic

./: .gitignore  readme.md  strat.md  words.md
algorithm/beam_search/: a49.rs  beam_search.md  beam_search_evaluation.md  beam_search_hash.md  beam_search_speedup.md  number_gather_game.cpp
algorithm/deque_state/: deque_state.md
algorithm/gaussian_distribution/: ahc003.md  gaussian_distribution.md  readme.md
algorithm/gaussian_process/: gaussian_process.md  gaussian_process_regression.hpp
algorithm/gibbs_sampling/: readme.md
algorithm/matrix/: lu_decomposition.hpp
algorithm/monte_calro/: newjudge_2304.cpp  readme.md
algorithm/simulated_annealing/: sa_destruct_rebuild.md  sa_infeasible_penalty.md  sa_speedup.md  sa_variety.md
algorithm/smooth_maximum/: smooth_maximum.ipynb
algorithm/tree_structed_parzen_estimator/: README.md
practice/: README.md  practice.md
practice/ahc010/: Cargo.toml
practice/ahc010/src/: main.rs
practice/ahc040/: .gitignore  Cargo.toml  optuna_ahc040.py
practice/ahc040/src/: main.rs
problems/: ahc001.md  ahc002.md  ahc003.md  ahc005.md  ahc006.md  ahc007.md  ahc028.md
runner/: .gitignore  Cargo.toml  LICENSE  readme.md
runner/src/: main.rs
src/: xorshift.hpp
utility/: array2d.hpp  arraynd.hpp  fixed_queue.hpp  optuna_example.py  random.hpp  timer.hpp
utility/rust/: Cargo.toml  log
utility/rust/src/: beam_search.rs  ds.rs  estimator.rs  gaussian_process.rs  lib.rs  random.rs  util.rs
utility/rust/src/beam_search/: clone_beam.rs  doubly_chained_tree.rs  ett_beam.rs
utility/rust/src/ds/: bitset.rs  fixed_bitset.rs  fixed_queue.rs
utility/rust/src/estimator/: kalman_filter.rs
utility/rust/src/gaussian_process/: gaussian_process.rs
utility/rust/src/random/: xor128.rs
utility/rust/src/util/: grid.rs  nop_hash.rs  pos.rs  timer.rs  tracker.rs
(+50 files in other folders)
