[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.10", features = ["derive"] }
rayon = "1.8.0"
indicatif = { version = "0.17.5", features = ["rayon"] }
dialoguer = "0.11"
walkdir = "2.4.0"
