[package]
name = "ahc010"
version = "0.1.0"
edition = "2021"

[dependencies]

rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
rand_chacha = "=0.3.1"
rand_distr = "=0.4.3"
rand_pcg = "=0.3.1"
itertools = "=0.11.0"
proconio = { version = "=0.4.5", features = ["derive"] }
once_cell = "1.20.1"
