[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "=1.1.0"
nalgebra = "=0.32.3"
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
rand_chacha = "=0.3.1"
rand_distr = "=0.4.3"
rand_pcg = "=0.3.1"
itertools = "=0.11.0"
proconio = { version = "=0.4.5", features = ["derive"] }
once_cell = "1.20.1"
